<resources>
    <string name="app_name">Jupa</string>
    <string name="welcome">On-site Assessment Of Skills Proficiency in Masonry</string>
    <string name="categories">Categories</string>
    <string name="groups">Trades</string>
    <string name="institutions">Institutions</string>
    <string name="skills">Skills</string>
    <string name="ranks">Ranks</string>
    <string name="accounts">Accounts</string>
    <string name="title_activity_groups">GroupsActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="group_name">Trade Name</string>
    <string name="role">Role:</string>
    <string name="edit_role">Edit Role</string>
    <string name="view_profile">more</string>
    <string name="add_group">Save</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Don\'t have an account? Register here</string>
    <string name="add_group_Form">Add Trade</string>
    <string name="mansory">Masonry</string>
    <string name="professional">Professional</string>
    <string name="title">Title</string>
    <string name="new_skill">New Skill</string>
    <string name="skill">Skill</string>
    <string name="new_Rank">New Rank</string>
    <string name="group_admin_name">Trade Admin Name</string>
    <string name="view_group_details">Trade Details</string>
    <string name="register_menu">Register</string>
    <string name="name">name</string>
    <string name="status">Status:</string>
    <string name="contact">Contact:</string>
    <string name="country">Country:</string>
    <string name="available">Available:</string>
    <string name="tumwesigye_godwin">Tumwesigye Godwin</string>
    <string name="state">State:</string>
    <string name="assessor">Assessor:</string>
    <string name="town">Town:</string>
    <string name="city">City:</string>
    <string name="email">Email:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="category">Category:</string>
    <string name="attach_skill">Attach Skill</string>
    <string name="projects">Projects</string>
    <string name="new_project">New Project</string>
    <string name="assign_admin">Assign Admin</string>
    <string name="view_my_profile">View Profile</string>
    <string name="requests">My Requests</string>
    <string name="view_candidates">View Candidates</string>
    <string name="incoming_requests">Applications</string>
    <string name="attach_assessor">Attach Assessor</string>
    <string name="log_out">Log out</string>
    <string name="location">Location:</string>
    <string name="date_of_completion">Date of Completion:</string>
    <string name="client_name">Client Name(s):</string>
    <string name="client_contact">Client Contact:</string>
    <string name="client_email">Client Email</string>
    <string name="attach_image">Attach Image</string>
    <string name="assess">Take Assessments</string>
    <string name="manage_questions">Manage Questions</string>
    <string name="question_category">Question Category</string>
    <string name="question">Question</string>
    <string name="project_assessed">Project Assessed</string>
    <string name="grade">Grade</string>
    <string name="other_remarks">Other Remarks</string>
    <string name="submit">Submit</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="project_assessments">Project Assessments</string>
    <string name="start_new">Start New</string>
    <string name="assessment">Assessment</string>
    <string name="group_code">Trade Code</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Middle Name</string>
    <string name="gender">Gender</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="other_no">Other No.</string>
    <string name="address">Address</string>
    <string name="education">Highest Education</string>
    <string name="reg_no">Reg No.</string>
    <string name="rank_code">Rank Code</string>
    <string name="rank_name">Rank Name</string>
    <string name="description">Description</string>
    <string name="client_address">Client Address</string>
    <string name="search">Search</string>
    <string name="level">Level:</string>
    <string name="search_by_registration_number">Search by registration number</string>
    <string name="rank">Rank</string>
    <string name="view_assessments">View Assessments</string>
    <string name="open">Open</string>
    <string name="archive">Archive</string>
    <string name="specialities">Specialities</string>
    <string name="date_available">Date Available</string>
    <string name="courses_offered">Courses Offered</string>
    <string name="principals">Principals</string>
    <string name="view_assessors">View Assessors</string>
    <string name="view_results">View Results</string>
    <string name="institution_name">Institution Name</string>
    <string name="center_number">Center Number</string>
    <string name="contact_person">Contact Person</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="about">About</string>
    <string name="about_the_institution">Say Something About the institution</string>
    <string name="attach_badge">Attach Badge</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="view_assessed_candidates">View Assessed Candidates</string>
    <string name="file_new_request">File New Request</string>
    <string name="become_assessor_request">Become Assessor Request</string>
    <string name="apply_for_a_higher_rank">Higher Rank Application</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="rank_applied_for">Rank Applied For</string>
    <string name="present_qualifications">Present Qualifications</string>
    <string name="reason_for_applying">Reason For Applying For This Rank</string>
    <string name="reason_for_application">Reason For Application</string>
    <string name="code">Secret Number</string>
    <string name="candidate">Candidate</string>
    <string name="institution">Institution</string>
    <string name="physical_address">Physical Address</string>
    <string name="default_number">0</string>
    <string name="assessment_report">Assessment Report</string>
    <string name="marks">Marks</string>
    <string name="application_type">Application</string>
    <string name="confirm">Confirm</string>
    <string name="decline_request">Decline</string>
    <string name="become_assessor">to become an accessor</string>
    <string name="higher_rank">for a higher rank</string>
    <string name="you_submitted">You submitted an application</string>
    <string name="forward">forward</string>
    <string name="comment">Comment</string>
    <string name="assessor_warning">Unfortunately you can\'t assess this candidate </string>
    <string name="applications">Applications</string>
    <string name="current_candidates">Current Candidates</string>
    <string name="all_candidates">All Candidates</string>
    <string name="candidates">Candidates</string>
    <string name="current_assessors">Current Assessors</string>
    <string name="all_assessors">All Assessors</string>
    <string name="assessors">Assessors</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="attach_comment">Attach Comment</string>
    <string name="cancel">Cancel</string>
    <string name="this_account_is_not_verified">This account is not verified</string>
    <string name="contacts">Contacts</string>
    <string name="jupa_intro_words">JUPA WORKFORCE RANKING \n AND\n CERTIFICATION</string>
    <string name="workforce_ranking">WorkForce Ranking</string>
    <string name="workforce_certification">WorkForce Certification</string>
    <string name="by_name">By name</string>
    <string name="by_country">By Country</string>
    <string name="by_state">By State</string>
    <string name="by_city">By City</string>
    <string name="by_rank">By Rank</string>
    <string name="by_group">By Trade</string>
    <string name="by_institution">By Institution</string>
    <string name="association">Association</string>
    <string name="administration">Administration</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group">Trade</string>
    <string name="payment">Payment</string>
    <string name="verify_project">Verify Project</string>
    <string name="enter_custom_number">Enter Custom Number</string>
    <string name="certify_your_profession">Certify your profession to national level</string>
    <string name="assists_skilled_and_experience">Assists skilled and experienced people to obtain Nationally recognised qualification</string>
    <string name="assists_clients_">Connects clients to certified labour contractors as;</string>
    <string name="brick_layers">Brick Layers</string>
    <string name="plumbers">Plumbers</string>
    <string name="carpenters">Carpenters</string>
    <string name="cooks">Cooks</string>
    <string name="etc">etc..</string>
    <string name="add_question">Add Question</string>
    <string name="question_code">Question Code</string>
    <string name="recommendation">Attach Recommendation\n(less than 1MB is required)</string>
    <string name="waive">Waive</string>
    <string name="extract_to_pdf">Extract to PDF</string>
    <string name="more">More</string>
    <string name="share_pdf">Share PDF</string>
    <string name="action_settings">Settings</string>

    <!-- strings for dialog -->
    <string name="string_permission_help">Help</string>
    <string name="string_permission_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_permission_quit">Exit App</string>
    <string name="string_settings">Settings</string>

    <string name="country_payment">UG</string>
    <string name="payment_currency">UGX</string>
    <string name="subjects">Subjects</string>
    <string name="no_subjects_register">No Subjects Registered</string>
    <string name="no_subjects">No Subjects Available</string>
    <string name="subject">Subject</string>
    <string name="performance">Performance</string>
    <string name="register_for_subjects">Register For Subjects</string>
    <string name="add_subject">Add Subject</string>
    <string name="module_name">Trade Name</string>
    <string name="contact_person_details">Contact Person Details</string>
    <string name="association_details">Association Details</string>
    <string name="date_of_registration">Date Of Registration</string>
    <string name="continue_to_submit">Continue</string>
    <string name="reload">Reload</string>
    <string name="category_options">Category Options</string>
    <string name="search_for_workers">Search Workers</string>
    <string name="join_program">Join Program</string>
    <string name="verify_institution">Verify Institution</string>
    <string name="disable_account">Disable Account</string>
</resources>
