<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/full_question_display"
        android:layout_marginTop="3dip"
        android:layout_width="match_parent"
        android:text="@string/question"
        android:textSize="18sp"
        android:textStyle="normal"
        android:padding="3dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/open_question"
        android:layout_gravity="end|center_vertical"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/open"
        android:textAllCaps="false"
        android:padding="6dip"
        android:textSize="15sp"
        android:layout_margin="3dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/grade_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/grade"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:padding="6dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:entries="@array/grades_array"
        android:id="@+id/grade_spinner"
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:textStyle="normal"
        android:padding="8dip"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/other_remarks_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/other_remarks"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:padding="6dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/other_remarks"
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:textStyle="normal"
        android:padding="8dip"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/archive_assessment"
        android:layout_gravity="end|center_vertical"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"
        android:text="@string/archive"
        android:textAllCaps="false"
        android:padding="6dip"
        android:textSize="15sp"
        android:layout_margin="3dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>

