<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white_trans"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">


    <RelativeLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/btn_layout_margintop"
            android:id="@+id/jupa_intro"
            android:padding="5dp"
            android:textStyle="bold|normal"
            android:textSize="17sp"
            android:text="@string/jupa_intro_words"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:textColor="@color/white"
            android:id="@+id/header_separator"
            android:layout_below="@id/jupa_intro"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:visibility="gone"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_card_membership_black_24dp"
            android:drawableStart="@drawable/ic_card_membership_black_24dp"
            android:drawablePadding="18dp"
            android:layout_below="@id/header_separator"
            android:id="@+id/work_force"
            android:textStyle="bold|normal"
            android:textSize="16sp"
            android:padding="8dp"
            android:text="@string/workforce_ranking"
            android:gravity="start|center_vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/ranking_layout"
            android:gravity="center|center_vertical"
            android:layout_marginTop="@dimen/drawable_padding"
            android:layout_below="@id/work_force"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/white"
                android:padding="8dp"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:textStyle="bold"
                android:gravity="center|center_vertical"
                android:text="@string/assists_clients_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/white"
                android:padding="8dp"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_radio_button_checked_black_24dp"
                android:drawableLeft="@drawable/ic_radio_button_checked_black_24dp"
                android:gravity="start|center_vertical"
                android:text="@string/brick_layers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/white"
                android:padding="8dp"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_radio_button_checked_black_24dp"
                android:drawableLeft="@drawable/ic_radio_button_checked_black_24dp"
                android:gravity="start|center_vertical"
                android:text="@string/plumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/white"
                android:padding="8dp"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_radio_button_checked_black_24dp"
                android:drawableLeft="@drawable/ic_radio_button_checked_black_24dp"
                android:gravity="start|center_vertical"
                android:text="@string/carpenters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/white"
                android:padding="8dp"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_radio_button_checked_black_24dp"
                android:drawableLeft="@drawable/ic_radio_button_checked_black_24dp"
                android:gravity="start|center_vertical"
                android:text="@string/cooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/white"
                android:padding="8dp"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_radio_button_checked_black_24dp"
                android:drawableLeft="@drawable/ic_radio_button_checked_black_24dp"
                android:gravity="start|center_vertical"
                android:text="@string/etc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_card_giftcard_black_24dp"
            android:drawableStart="@drawable/ic_card_giftcard_black_24dp"
            android:drawablePadding="18dp"
            android:layout_below="@id/ranking_layout"
            android:id="@+id/work_force_certification"
            android:textStyle="bold|normal"
            android:textSize="16sp"
            android:padding="8dp"
            android:text="@string/workforce_certification"
            android:gravity="start|center_vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/certification_layout"
            android:gravity="center|center_vertical"
            android:layout_marginTop="@dimen/drawable_padding"
            android:layout_below="@id/work_force_certification"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/white"
                android:padding="8dp"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:textStyle="bold"
                android:gravity="start|center_vertical"
                android:text="@string/certify_your_profession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/white"
                android:padding="8dp"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_radio_button_checked_black_24dp"
                android:drawableLeft="@drawable/ic_radio_button_checked_black_24dp"
                android:gravity="start|center_vertical"
                android:text="@string/assists_skilled_and_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



        </LinearLayout>
    </RelativeLayout>


</androidx.core.widget.NestedScrollView>