<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SearchActivity">

    <LinearLayout
        android:id="@+id/searchLinear"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="12dp"
            android:visibility="gone"
            android:id="@+id/by_name_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:padding="12dp"
                android:textSize="15sp"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:padding="12dp"
            android:visibility="gone"
            android:id="@+id/by_country_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/country"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/country_spinner_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:padding="12dp"
            android:visibility="gone"
            android:id="@+id/by_state_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/state"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/state_spinner_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:padding="12dp"
            android:visibility="gone"
            android:id="@+id/by_city_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/city"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/city_spinner_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:padding="12dp"
            android:visibility="gone"
            android:id="@+id/by_rank_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/rank"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/rank_spinner_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:padding="12dp"
            android:visibility="gone"
            android:id="@+id/by_group_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/group"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/group_spinner_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:padding="12dp"
            android:visibility="gone"
            android:id="@+id/by_institution_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/institution"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <Spinner
                android:id="@+id/institution_spinner_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/search_btn"
        android:layout_marginTop="20dip"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/searchLinear"
        android:textColor="@color/white"
        android:text="@string/search"
        android:background="@drawable/button_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/search_progress_bar"
        android:layout_marginTop="15dip"
        android:layout_below="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>