<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentPadding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_subject"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/subject_name_input"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/save_subject_btn"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_group"
            android:background="@drawable/button_primary"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>